# Philote-Python

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  CHANGELOG.md  README.md  genindex.html  installation.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: tests.yaml
api/: explicit.html
doc/: _config.yml  _toc.yml  installation.md  license.md
doc/tutorials/: implicit_disciplines.md  openmdao.md  openmdao_groups.md
examples/: openmdao_parabaloid.py  openmdao_quadratic.py  openmdao_sellar.py  parabaloid_client.py  parabaloid_explicit.py  quadratic_client.py  quadratic_implicit.py  sellar_client.py
philote_mdo/examples/: __init__.py  sellar.py
philote_mdo/general/: implicit_client.py  implicit_discipline.py  implicit_server.py  run_server.py
philote_mdo/openmdao/: __init__.py  explicit.py  group.py  implicit.py  utils.py
tests/: test_abstract_methods.py  test_discipline_client.py  test_discipline_server.py  test_edge_cases.py  test_import_exceptions.py  test_openmdao_explicit_client.py  test_openmdao_group.py  test_openmdao_implicit_client.py  test_openmdao_integration.py  test_openmdao_utils.py  test_quadratic.py  test_sellar.py
tutorials/: explicit_disciplines.html  implicit_disciplines.html  openmdao.html  quickstart.html  units.html
utils/: compile_proto.py
