[tool.poetry]
name = "philote-mdo"
version = "0.7.0"
description = "Python bindings that implement the Philote-MDO standard."
license = "Apache-2.0"
authors = ["Christopher Lupp"]
readme = "README.md"
homepage = "https://chrislupp.github.io/Philote-Python/"
repository = "https://github.com/chrislupp/Philote-Python"
documentation = "https://chrislupp.github.io/Philote-Python/"
keywords = ["mdo", "optimization", "rpc"]
include = ["philote_mdo/generated/*pb2.py", "philote_mdo/generated/*pb2.pyi", "philote_mdo/generated/*grpc.py", "proto/*"]


[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.71.2,<2.0"
protobuf = "^5.29.0,<6.0"
numpy = "^1.19.0"
scipy = "^1.10.0"

[tool.poetry.group.openmdao]
optional = true

[tool.poetry.group.openmdao.dependencies]
openmdao = "^3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^23.0"
flake8 = "^6.0"


[build-system]
requires = ["poetry-core", "grpcio-tools>=1.71.2,<2.0", "protoletariat"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.build]
generate-setup-file = false
script = "utils/compile_proto.py"
